--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@ body {
     width: 100%;
     height: 100vh;
     margin: 0;
-    background-color: #1b1b32;
+    background-color: #d42929;
     color: #f5f6f7;
     font-family: Tahoma;
     font-size: 16px;
@@ -26,7 +26,7 @@ fieldset {
 }
 
 fieldset:not(:last-of-type) {
-    border-bottom: 3px solid #3b3b4f;
+    border-bottom: 3px solid #f5f6f7;
 }
 
 legend {
@@ -37,17 +37,18 @@ legend {
 input {
     background-color: #0a0a23;
     border: 1px solid #0a0a23;
-    color: #ffffff;
+    color: #f5f6f7;
 }
 
-input[type="submit"] {
+button {
     display: block;
     width: 60%;
     margin: 1em auto;
     height: 2em;
     font-size: 1.1rem;
-    background-color: #3b3b4f;
+    background-color: #fff562;
     border-color: white;
+    color: #831818;
     min-width: 300px;
 }
 
@@ -57,7 +58,7 @@ footer {
     margin: 1em auto;
     height: 2em;
     font-size: 1.1rem;
-    color: red;
+    color: rgb(255, 251, 0);
     min-width: 300px;
 }
 
@@ -70,9 +71,9 @@ a:visited {
 }
 
 a:hover {
-    color: red;
+    color: rgb(255, 251, 0);
 }
 
 a:active {
-    color: red;
+    color: rgb(255, 251, 0);
 }
